@startuml
'https://plantuml.com/class-diagram

interface Post {
    id: string,
    from_name: string,
    from_id: string,
    message: string,
    type: string,
    created_time: string
}

abstract class ToString {
    toString(): string
}
abstract class Print {
    print()
}
class PrintConsole {
}
abstract class Statistics {
    group(): Array<GroupByObj>
}

interface GroupByObj {
    numerical: number;
    categorical: string;
}

GroupByObj --o PrintConsole
Post --o Statistics

Print <|-- PrintConsole

class AverageCharLengthOfPostsPerMonth
ToString <|-- AverageCharLengthOfPostsPerMonth
GroupByObj <|-- AverageCharLengthOfPostsPerMonth
ToString <|-- LongestPostByCharacterLengthPerMonth
GroupByObj <|-- LongestPostByCharacterLengthPerMonth
ToString <|-- TotalPostsSplitByWeekNumber
GroupByObj <|-- TotalPostsSplitByWeekNumber
ToString <|-- AverageNumberOfPostsPerUserPerMonth
GroupByObj <|-- AverageNumberOfPostsPerUserPerMonth

Statistics <|-- AverageCharLengthOfPostsPerMonthImpl
Statistics <|-- LongestPostByCharacterLengthPerMonthImpl
Statistics <|-- TotalPostsSplitByWeekNumberImpl
Statistics <|-- AverageNumberOfPostsPerUserPerMonthImpl

@enduml